client/main/main.css
/* ... */
.creWork:hover {
	background-color: rgba(0,0,0,0.05);
}

.creWork h4 {
	padding-left: 0;
}

.workHolder {
	width: 100%;
}

.workCard {
	width: 90%;
	margin: 2.5% 5% 2.5% 5%;
	background-color: rgba(255,255,255,0.3);
	box-shadow: 2px 2px 5px 3px #666;
	cursor: pointer;

	-webkit-transition: box-shadow 0.4s ease, transform 0.3s ease;  
	-moz-transition: box-shadow 0.4s ease, transform 0.3s ease; 
	-ms-transition: box-shadow 0.4s ease, transform 0.3s ease;
	transition: box-shadow 0.4s ease, transform 0.3s ease;
}

.workCard:first-child {
	margin-top: 5%;
}

.workCard:last-child {
	margin-bottom: 5%;
}

.workCard:hover {
	box-shadow: 2px 2px 5px 3px #666, inset 0 0 0 99999px rgba(0,0,0,0.09);
}

.cWorkTop {
	margin: 0 0 5% 0;
}

.cWorkCreator {
	float: right;
}

.cWorkCont {
	padding: 5%;
}

.cWorkType {
	height: 5px;
}

.cWorkName {
	font-weight: 400;
	margin-top: 0;
}

#editWork {
	width: 40%;
	height: 70%;
	margin: auto;
	margin-top: 5%;

	box-shadow: 2px 2px 5px 3px #333;
}

#editWork input, #editWork textarea {
	font-size: 2vh;
	background-color: #FFF;
}

#workDesca {
	width: 15vw;
}

#workDatea {
	width: 17vw;
}

#editWorkCont {
	width: 100%;
	height: 100%;

	position: relative;
	display: table;
}

#workTypeBar {
	background-color: rgba(0,0,0,0.1);
	height: 2%;
}

#workNameDiv {
	padding: 4% 4% 0 3.5%;
}f

#workName {
	font-weight: 400;
	font-size: 3vh;
}

.workTitle, .prefTitle {
	font-size: 200%;
	font-weight: 400;
	margin: 0 3% 1% 0;
	cursor: default;
}

.prefTitle {
	font-size: 140%;
	margin-top: 5%;
}

#workNamerestrict, #workDescrestrict, #commentrestrict {
	display: none;
}

#workNamerestrict, #workDescrestrict {
	margin-top: 1.5%;
	float: right;
}

.workOptions, .prefOptions {
	box-shadow: 2px 2px 5px 3px #666;

	position: absolute;
	display: none;
	z-index: 5;

	opacity: 0;

	-webkit-transition: opacity 0.4s ease;  
	-moz-transition: opacity 0.4s ease; 
	-ms-transition: opacity 0.4s ease;
	transition: opacity 0.4s ease; 
}

.workOptionText, .prefOptionText {
	font-size: 150%;
	min-width: 10%;
	padding: 20px;
	margin: 0;

	text-align: center;
	cursor: pointer;
	
	-webkit-transition: box-shadow 0.4s ease;  
	-moz-transition: box-shadow 0.4s ease; 
	-ms-transition: box-shadow 0.4s ease;
	transition: box-shadow 0.4s ease;
}

.workOptions p:hover, .prefOptions p:hover {
	box-shadow: inset 0 0 0 99999px rgba(0,0,0,0.1);
}

#workInfoContainer, #workToggle {
	height: 100%;
	display: table-cell;
	vertical-align: top;
}

#workInfoContainer {
	width: 28vw;
	margin-right: 3%;
	float: left;
}

#workToggle {
	width: 10.8vw;
	float: right;
	vertical-align: top;
}

#workInfoNmCont {
	padding: 3% 0 3% 7%;
}

#workInfoNmCont div {
	margin-bottom: 5%;
}

.datepicker {
	box-shadow: 2px 2px 5px 3px #666;
	color: #000;
	background-color: rgba(250,250,250,0.85);
	position: absolute;
}

.inputRadio {
	margin-bottom: 0 !important;
}

.type {
	margin-left: 11%;
}

#workComments h3 {
	margin-bottom: 2%;
	-webkit-filter: none;
	filter: none;
}

#workSubmit, #workDelete {
	font-weight: 200;
	font-size: 140%;
	padding: 2%;

	background-color: rgba(0,0,0,0.25);
	text-align: center;
	cursor: pointer;

	position: absolute;
	right: 3%;
	bottom: 3%;

	-webkit-transition: background-color 0.4s ease;  
	-moz-transition: background-color 0.4s ease; 
	-ms-transition: background-color 0.4s ease;
	transition: background-color 0.4s ease;
}

#workSubmit:hover, #workDelete:hover {
	background-color: rgba(0,0,0,0.15);
}

.overlay {
	width: 100%;
	height: 100%;
	background-color: rgba(0,0,0,0.5);

	display: none;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 51;

	opacity: 0;
	
	-webkit-transition: opacity 0.4s ease;  
	-moz-transition: opacity 0.4s ease; 
	-ms-transition: opacity 0.4s ease;
	transition: opacity 0.4s ease; 
}

.overlayCont {
	font-size: 3.1vh;
	width: 20vw;
	height: 20vh;
	margin: auto;
	margin-top: 25vh;
	padding: 1%;
	box-shadow: 2px 2px 5px 3px #666;

	-moz-border-radius: 30px;
	-webkit-border-radius: 30px;
	border-radius: 30px;

	text-align: center;
}

.overlayCont i {
	font-size: 8vh;
	margin: 0 10% 0 10%;
	text-align: center;
}

#faCont {
	width: 100%;
}

.fa-check-circle-o, .fa-times-circle-o {
	-webkit-transition: color 0.4s ease;  
	-moz-transition: color 0.4s ease; 
	-ms-transition: color 0.4s ease;
	transition: color 0.4s ease;

	cursor: pointer;
}

.fa-check-circle-o:hover {
	color: #85E085;
}

.fa-check-circle-o:active {
	color: #33CC33;

	-webkit-transition: background-color 0.2s ease;  
	-moz-transition: background-color 0.2s ease; 
	-ms-transition: background-color 0.2s ease;
	transition: background-color 0.2s ease; 
}

.fa-times-circle-o:hover {
	color: #FF6666;
}

.fa-times-circle-o:active {
	color: #FF1A1A;

	-webkit-transition: background-color 0.2s ease;  
	-moz-transition: background-color 0.2s ease; 
	-ms-transition: background-color 0.2s ease;
	transition: background-color 0.2s ease; 
}

#bg {
	min-width: 1920px;
	min-height: 100%;
	width: 100%;
	height: auto;

	position: fixed;
	top: 0;
	left: 0;
	z-index: -1;

}

#mainBody {
	width: 100%;
	height: 100%;
	position: relative;

	-webkit-transition: opacity 0.4s ease;  
	-moz-transition: opacity 0.4s ease; 
	-ms-transition: opacity 0.4s ease;
	transition: opacity 0.4s ease;
}

#calendar {
	width: 90%;
	height: 100%;
	margin: auto;
	padding-top: 2%;
}

#fullcalendar {
	background-color: rgba(255,255,255,0.3); 
	border: 2vh solid rgba(255,255,255,0.3);
	-webkit-background-clip: padding-box;
	background-clip: padding-box;
}

.fc-view-container, .fc-left {
	-webkit-transition: opacity 0.4s ease;  
	-moz-transition: opacity 0.4s ease; 
	-ms-transition: opacity 0.4s ease;
	transition: opacity 0.4s ease;
}

.fc-view-container {
	background-color: rgba(255,255,255,0.8);
}

.fc-left {
	padding: 0.5% 1% 0.5% 1%;
	background-color: rgba(255,255,255,0.8);

	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
}

.fc-left h2 {
	font-weight: 400;

	-webkit-filter: none;
	filter: none;
}
/* ... */

